--- a/simulator/index.html
+++ b/simulator/index.html
@@ -6,9 +6,68 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LONI - Simulator</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
+
 </head>
 <body>
-    
+    <div class="loni-simulator">
+        <div class="container">
+            <h1 class="loni-simulator__title">Calcúla Rápidamente <br> <span>el pago de tu prestamo</span></h1>
+            <div class="loni-simulator__form">
+                <div class="loni-simulator__form-header">
+                    <div class="loni-simulator__form-result">
+                        <div class="loni-simulator__form-text">Your estimated monthly payment:</div>
+                        <div class="loni-simulator__form-total">$ 2400,88</div>
+                    </div>
+                    <div class="loni-simulator__form-categories">
+                        <span class="loni-simulator__form-category-payment">Down payment</span>
+                        <span class="loni-simulator__form-category-interest">Interest</span>
+                        <span class="loni-simulator__form-category-principal">Principal</span>
+                        <span class="loni-simulator__form-category-tax">Tax</span>
+                    </div>
+                </div>
+                <div class="loni-simulator__form-body row">
+                    <div class="col-lg-6">
+                        <div class="loni-simulator__form-group">
+                            <label>Home Value:</label>
+                            <input type="text">
+                        </div>
+                        <div class="loni-simulator__form-group">
+                            <label>Down Payment:</label>
+                            <input type="text" class="input-1">
+                            <input type="text" class="input-2">
+                        </div>
+                        <div class="loni-simulator__form-group">
+                            <label>Start Date: </label>
+                            <input type="date" class="input-3">
+                            <input type="date" class="input-4">
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="loni-simulator__form-group">
+                            <label>loan Amount:</label>
+                            <input type="text">
+                        </div>
+                        <div class="loni-simulator__form-group">
+                            <label>Interest Rate:</label>
+                            <input type="text">
+                        </div>
+                        <div class="loni-simulator__form-group">
+                            <label>Loan Term: </label>
+                            <input type="text">
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        Column 2
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>    
 
     
     <script src="main.js"></script>
