--- a/simulator/index.html
+++ b/simulator/index.html
@@ -1,16 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LONI - Simulator</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <section class="step-wizard">
+      <div class="step-wizard-container">
+        <div class="step-title-container">
+            <span class="step-title">Check out your line process</span>
+        </div>
+        <ul class="step-wizard-list">
+          <li class="step-wizard-item">
+            <span class="progress-count"
+              ><img class="img-check" src="./img/Imagen1.png" alt="check"
+            /></span>
+            <span class="progress-label">Pre Aprobación</span>
+            <span class="progress-label-text"
+              >Estoy interesado en recibir un préstamo para invertir en una
+              propiedad en EU.</span
+            >
+          </li>
+          <li class="step-wizard-item">
+            <span class="progress-count"
+              ><img class="img-check" src="./img/Imagen1.png" alt="check"
+            /></span>
+            <span class="progress-label">Encuentra tu propiedad</span>
+            <span class="progress-label-text"
+              >Estoy interesado en recibir un préstamo para invertir en una
+              propiedad en EU.</span
+            >
+          </li>
+          <li class="step-wizard-item current-item">
+            <span class="progress-count"
+              ><img
+                class="img-check-current"
+                src="./img/Imagen2.png"
+                alt="check"
+            /></span>
+            <span class="progress-label">Aprueba tu préstamo</span>
+            <span class="progress-label-text"
+              >Estoy interesado en recibir un préstamo para invertir en una
+              propiedad en EU.</span
+            >
+          </li>
+          <li class="step-wizard-item">
+            <span class="progress-count"></span>
+            <span class="progress-label">Recibe las llaves</span>
+            <span class="progress-label-text"
+              >Estoy interesado en recibir un préstamo para invertir en una
+              propiedad en EU.</span
+            >
+          </li>
+          <li class="step-wizard-item">
+            <span class="progress-count"></span>
+            <span class="progress-label">Invitanos a celebrar!</span>
+            <span class="progress-label-text"
+              >Estoy interesado en recibir un préstamo para invertir en una
+              propiedad en EU.</span
+            >
+          </li>
+        </ul>
+      </div>
+    </section>
 
-    
     <script src="main.js"></script>
-</body>
+  </body>
 </html>
