--- a/simulator/seguimiento.html
+++ b/simulator/seguimiento.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LONI - Simulator</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles-seguimiento.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
@@ -17,7 +17,40 @@
         <div class="step-title-container">
             <span class="step-title">A quien deseas hacerle seguimiento hoy?</span>
         </div>
-        
+        <div class="people-img">
+          <div class="container-people-information">
+            <img class="circular--square" src="./img/people.jpg" />
+            <span class="name-label">Alvaro Uribe</span>
+          </div>
+          <div class="container-people-information">
+            <img class="circular--square" src="./img/people.jpg" />
+            <span class="name-label">Alvaro Uribe</span>
+          </div>
+          <div class="container-people-information">
+            <img class="circular--square" src="./img/people.jpg" />
+            <span class="name-label">Alvaro Uribe</span>
+          </div>
+          <div class="container-people-information">
+            <img class="circular--square" src="./img/people.jpg" />
+            <span class="name-label">Alvaro Uribe</span>
+          </div>
+          <div class="container-people-information">
+            <img class="circular--square" src="./img/people.jpg" />
+            <span class="name-label">Alvaro Uribe</span>
+          </div>
+          <div class="container-people-information">
+            <img class="circular--square" src="./img/people.jpg" />
+            <span class="name-label">Alvaro Uribe</span>
+          </div>
+          <div class="container-people-information">
+            <img class="circular--square" src="./img/people.jpg" />
+            <span class="name-label">Alvaro Uribe</span>
+          </div>
+          <div class="container-people-information">
+            <img class="circular--square" src="./img/people.jpg" />
+            <span class="name-label">Alvaro Uribe</span>
+          </div>
+        </div>
       </div>
     </section>
 
