--- a/simulator/seguimiento.html
+++ b/simulator/seguimiento.html
@@ -19,37 +19,38 @@
         </div>
         <div class="people-img">
           <div class="container-people-information">
-            <img class="circular--square" src="./img/people.jpg" />
-            <span class="name-label">Alvaro Uribe</span>
+            <img class="circular--square" src="./img/user2.png" />
+            <span class="name-label">Felipe Arboleda</span>
           </div>
           <div class="container-people-information">
-            <img class="circular--square" src="./img/people.jpg" />
-            <span class="name-label">Alvaro Uribe</span>
+            <img class="circular--square" src="./img/user2.png" />
+            <span class="name-label">Felipe Arboleda</span>
           </div>
           <div class="container-people-information">
-            <img class="circular--square" src="./img/people.jpg" />
-            <span class="name-label">Alvaro Uribe</span>
+            <img class="circular--square" src="./img/user2.png" />
+            <span class="name-label">Felipe Arboleda</span>
           </div>
           <div class="container-people-information">
-            <img class="circular--square" src="./img/people.jpg" />
-            <span class="name-label">Alvaro Uribe</span>
+            <img class="circular--square" src="./img/user2.png" />
+            <span class="name-label">Felipe Arboleda</span>
           </div>
           <div class="container-people-information">
-            <img class="circular--square" src="./img/people.jpg" />
-            <span class="name-label">Alvaro Uribe</span>
+            <img class="circular--square" src="./img/user2.png" />
+            <span class="name-label">Felipe Arboleda</span>
           </div>
           <div class="container-people-information">
-            <img class="circular--square" src="./img/people.jpg" />
-            <span class="name-label">Alvaro Uribe</span>
+            <img class="circular--square" src="./img/user2.png" />
+            <span class="name-label">Felipe Arboleda</span>
           </div>
           <div class="container-people-information">
-            <img class="circular--square" src="./img/people.jpg" />
-            <span class="name-label">Alvaro Uribe</span>
+            <img class="circular--square" src="./img/user2.png" />
+            <span class="name-label">Felipe Arboleda</span>
           </div>
           <div class="container-people-information">
-            <img class="circular--square" src="./img/people.jpg" />
-            <span class="name-label">Alvaro Uribe</span>
+            <img class="circular--square" src="./img/user2.png" />
+            <span class="name-label">Felipe Arboleda</span>
           </div>
+          
         </div>
       </div>
     </section>
