feat: Finish view dashboard, add message Loni

--- a/simulator/index.html
+++ b/simulator/index.html
@@ -15,7 +15,7 @@
     <section class="step-wizard">
       <div class="step-wizard-container">
         <div class="step-title-container">
-            <span class="step-title">Check out your line process</span>
+          <span class="step-title">Check out your line process</span>
         </div>
         <ul class="step-wizard-list">
           <li class="step-wizard-item">
@@ -68,6 +68,18 @@
             >
           </li>
         </ul>
+      </div>
+      <div class="loni-contact">
+        <img src="./img/user.png" alt="Loni" />
+        <div class="comments">
+          <div class="comments bubble">
+            <p>¡Quiero contactar a mi Loni asesor!</p>
+            <div id="container-buttons-contact">
+              <button class="button">Llamar</button>
+              <button class="button button2">Escribir por WhatsApp</button>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
