fix: solve comments in Markup

--- a/dashboards/realtor.html
+++ b/dashboards/realtor.html
@@ -4,81 +4,56 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LONI - Realtor</title>
-    <link rel="stylesheet" href="realtor.css" />
+    <title>Preview Dashboard Realtor</title>
+    <link rel="stylesheet" href="styles-realtor.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   </head>
   <body>
     <section class="step-wizard">
       <div class="step-wizard-container">
         <div class="step-title-container">
-          <span class="step-title">Check out your line process</span>
+            <span class="step-title">A quien deseas hacerle seguimiento hoy?</span>
         </div>
-        <ul class="step-wizard-list">
-          <li class="step-wizard-item">
-            <span class="progress-count"
-              ><img class="img-check" src="./img/check.png" alt="check"
-            /></span>
-            <span class="progress-label">Pre Aprobación</span>
-            <span class="progress-label-text"
-              >Estoy interesado en recibir un préstamo para invertir en una
-              propiedad en EU.</span
-            >
-          </li>
-          <li class="step-wizard-item">
-            <span class="progress-count"
-              ><img class="img-check" src="./img/check.png" alt="check"
-            /></span>
-            <span class="progress-label">Encuentra tu propiedad</span>
-            <span class="progress-label-text"
-              >Estoy interesado en recibir un préstamo para invertir en una
-              propiedad en EU.</span
-            >
-          </li>
-          <li class="step-wizard-item current-item">
-            <span class="progress-count"
-              ><img
-                class="img-check-current"
-                src="./img/danger.png"
-                alt="check"
-            /></span>
-            <span class="progress-label">Aprueba tu préstamo</span>
-            <span class="progress-label-text"
-              >Estoy interesado en recibir un préstamo para invertir en una
-              propiedad en EU.</span
-            >
-          </li>
-          <li class="step-wizard-item">
-            <span class="progress-count"></span>
-            <span class="progress-label">Recibe las llaves</span>
-            <span class="progress-label-text"
-              >Estoy interesado en recibir un préstamo para invertir en una
-              propiedad en EU.</span
-            >
-          </li>
-          <li class="step-wizard-item">
-            <span class="progress-count"></span>
-            <span class="progress-label">Invitanos a celebrar!</span>
-            <span class="progress-label-text"
-              >Estoy interesado en recibir un préstamo para invertir en una
-              propiedad en EU.</span
-            >
-          </li>
-        </ul>
-      </div>
-      <div class="loni-contact">
-        <img src="./img/user.png" alt="Loni" />
-        <div class="comments">
-          <div class="comments bubble">
-            <p>¡Quiero contactar a mi Loni asesor!</p>
-            <div id="container-buttons-contact">
-              <button class="button">Llamar</button>
-              <button class="button button2">Escribir por WhatsApp</button>
-            </div>
+        <div class="people-img">
+          <div class="container-people-information">
+            <img class="circular--square" src="./img/user2.png" />
+            <span class="name-label">Felipe Arboleda</span>
           </div>
+          <div class="container-people-information">
+            <img class="circular--square" src="./img/user2.png" />
+            <span class="name-label">Felipe Arboleda</span>
+          </div>
+          <div class="container-people-information">
+            <img class="circular--square" src="./img/user2.png" />
+            <span class="name-label">Felipe Arboleda</span>
+          </div>
+          <div class="container-people-information">
+            <img class="circular--square" src="./img/user2.png" />
+            <span class="name-label">Felipe Arboleda</span>
+          </div>
+          <div class="container-people-information">
+            <img class="circular--square" src="./img/user2.png" />
+            <span class="name-label">Felipe Arboleda</span>
+          </div>
+          <div class="container-people-information">
+            <img class="circular--square" src="./img/user2.png" />
+            <span class="name-label">Felipe Arboleda</span>
+          </div>
+          <div class="container-people-information">
+            <img class="circular--square" src="./img/user2.png" />
+            <span class="name-label">Felipe Arboleda</span>
+          </div>
+          <div class="container-people-information">
+            <img class="circular--square" src="./img/user2.png" />
+            <span class="name-label">Felipe Arboleda</span>
+          </div>
+          
         </div>
       </div>
     </section>
